--- a/lang/ru.po
+++ b/lang/ru.po
@@ -1,13 +1,18 @@
+# 
+#   <transifex@sokolov.cc>, 2011.
+# Akral <transifex@sokolov.cc>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: Drafting\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: Denis Sokolov <denis@sokolov.cc>\n"
+"PO-Revision-Date: 2011-07-16 20:53+0000\n"
+"Last-Translator: Akral <transifex@sokolov.cc>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: ru_RU\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 msgid "title"
 msgstr "Проводим драфт"
@@ -22,10 +27,13 @@ msgid "c-h1"
 msgstr "Здравствуй, дорогой коллега, желающий провести драфт!"
 
 msgid "c-h2"
-msgstr "Всё, что от вас требуется — читать текст с экрана и следить за игроками."
+msgstr ""
+"Всё, что от тебя требуется — читать текст с экрана и следить за игроками."
 
 msgid "c-h3"
-msgstr "Программа контролируется одной–единственной клавишей <strong>пробел</strong>."
+msgstr ""
+"Программа контролируется одной–единственной клавишей "
+"<strong>пробел</strong>."
 
 msgid "understood"
 msgstr "Понятно. Поехали!"
@@ -43,7 +51,10 @@ msgid "t-homepage"
 msgstr "Перейти на сайт проекта, где расположена вся информация о нём."
 
 msgid "offline-notice"
-msgstr "Чтобы использовать программу без интернета, воспользуйтесь функцией «File &rarr; Save Page» вашево браузера. Но, пожалуйста, заглядывайте в интернет, ибо программа будет обновляться, а локальная версия остаётся старой."
+msgstr ""
+"Чтобы использовать программу без интернета, воспользуйся функцией «File "
+"&rarr; Save Page» своего браузера. Но, пожалуйста, заглядывай в интернет, "
+"ибо программа будет обновляться, а локальная версия остаётся старой."
 
 msgid "noted"
 msgstr "Учтено."
@@ -64,7 +75,7 @@ msgid "setting-sounds-download"
 msgstr "Скачайте их"
 
 msgid "setting-sounds-restart"
-msgstr "и <a href="">перегрузите программу</a>"
+msgstr "и <a href=\"\">перегрузите программу</a>"
 
 msgid "sets"
 msgstr "Наборы:"
@@ -76,46 +87,64 @@ msgid "instructions-1"
 msgstr "Добро пожаловать в драфт."
 
 msgid "instructions-2"
-msgstr "Мы разберём три пачки:"
+msgstr "Мы разберём три бустера:"
 
 msgid "instructions-2-and"
 msgstr "и"
 
 msgid "instructions-3"
-msgstr "Пожалуйста, удостоверьтесь, что перед вами есть эти пачки."
+msgstr "Пожалуйста, удостоверьтесь, что перед вами есть эти бустера."
 
 msgid "instructions-4"
-msgstr "Во время драфта я буду говорить «смотрим», тогда можно будеть смотреть на карты в руках. Я извещу, когда время будет подходить к концу, и, когда я скажу «передайте», вы должны тут же передать карты соседу. Если возможно, перемешайте их и передавайте выкладывая по три."
+msgstr ""
+"Во время драфта я буду говорить «смотрим», тогда можно будеть смотреть на "
+"карты в руках. Я извещу, когда время будет подходить к концу, и, когда я "
+"скажу «передайте», вы должны тут же передать карты соседу. Если возможно, "
+"перемешайте их и передавайте выкладывая по три."
+
+msgid "instructions-4.5"
+msgstr ""
+"Когда ваш сосед передал вам карты, возьмите их в руку, но не смотрите на "
+"них, пока я не скажу."
 
 msgid "continue"
 msgstr "Продолжить"
 
 msgid "instructions-5"
-msgstr "Между пачками у вас будет некоторое время просмотреть, что вы уже набрали."
+msgstr ""
+"Между бустерами у вас будет некоторое время просмотреть, что вы уже набрали."
 
 msgid "instructions-6"
-msgstr "Во время драфта старайтесь концентрироваться на картах и не выдавать никакой информации соперникам."
+msgstr ""
+"Во время драфта старайтесь концентрироваться на картах и не выдавать никакой"
+" информации соперникам."
 
 msgid "they-got-it"
 msgstr "Они поняли"
 
 msgid "open-first"
-msgstr "Откройте первую пачку,"
+msgstr "Откройте первый бустер,"
 
 msgid "open-first-2"
-msgstr ", и пересчитайте карты <strong>рубашками вверх</strong>. Там должно быть 14 карт."
+msgstr ""
+", и пересчитайте карты <strong>рубашками вверх</strong>. Там должно быть 14 "
+"карт."
 
 msgid "open-second"
-msgstr "Откройте вторую пачку,"
+msgstr "Откройте второй бустер,"
 
 msgid "open-second-2"
-msgstr ", и пересчитайте карты <strong>рубашками вверх</strong>. Там должно быть 14 карт."
+msgstr ""
+", и пересчитайте карты <strong>рубашками вверх</strong>. Там должно быть 14 "
+"карт."
 
 msgid "open-third"
-msgstr "Откройте третью пачку,"
+msgstr "Откройте третий бустер,"
 
 msgid "open-third-2"
-msgstr ", и пересчитайте карты <strong>рубашками вверх</strong>. Там должно быть 14 карт."
+msgstr ""
+", и пересчитайте карты <strong>рубашками вверх</strong>. Там должно быть 14 "
+"карт."
 
 msgid "yes-there-are"
 msgstr "Так и есть."
@@ -133,19 +162,19 @@ msgid "begin-draft"
 msgstr "Начать драфт."
 
 msgid "begin-second-booster"
-msgstr "Начать вторую пачку"
+msgstr "Начать второй бустер"
 
 msgid "begin-third-booster"
-msgstr "Начать третью пачку"
+msgstr "Начать третий бустер"
 
 msgid "booster-1"
-msgstr "Первая пачка"
+msgstr "Первый бустер"
 
 msgid "booster-2"
-msgstr "Вторая пачка"
+msgstr "Второй бустер"
 
 msgid "booster-3"
-msgstr "Третья пачка"
+msgstr "Третий бустер"
 
 msgid "look"
 msgstr "Смотрим!"
@@ -163,7 +192,7 @@ msgid "5-seconds"
 msgstr "5 секунд!"
 
 msgid "put-back"
-msgstr "Положите карты на место."
+msgstr "Положите карты на место, в одну стопку."
 
 msgid "done"
 msgstr "Готово."
@@ -172,13 +201,12 @@ msgid "draft-over"
 msgstr "Драфт окончен."
 
 msgid "take-and-sit"
-msgstr "Возьмите свои карты и займите свои места. Старайтесь не делиться информацией о драфте с другими игроками."
+msgstr ""
+"Возьмите свои карты и займите свои места. Старайтесь не делиться информацией"
+" о драфте с другими игроками."
 
 msgid "finish"
 msgstr "Конец."
-
-msgid "about-title"
-msgstr "О программе"
 
 msgid "restart-timer"
 msgstr "Перезапустить таймер"
@@ -191,4 +219,5 @@ msgstr "Передайте (N карту/карты/карт)."
 
 msgid "card-number"
 msgstr "(N-ая) карта"
+
 
